# cogito

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  deny.toml  justfile  rust-toolchain.toml
crates/cogito-cli/: Cargo.toml
crates/cogito-cli/src/: banner.rs  chat.rs  chat_config.rs  lib.rs  main.rs  render.rs
crates/cogito-cli/tests/: config_anthropic_compat_third_party.rs  config_cli_overrides.rs  config_file_only.rs  config_legacy_env_bridge.rs  resolve_strategy.rs  slash_skill.rs
crates/cogito-config/: Cargo.toml
crates/cogito-config/src/: env.rs  file.rs  interpolate.rs  lib.rs  loader.rs  merge.rs  types.rs
crates/cogito-config/tests/: env_loader.rs  file_loader.rs  interpolate.rs  merge.rs
crates/cogito-context/: Cargo.toml
crates/cogito-context/src/: lib.rs  pipeline.rs
crates/cogito-context/src/compactor/: mod.rs  none.rs  truncate.rs
crates/cogito-context/src/injector/: mod.rs  none.rs  skill.rs
crates/cogito-context/src/overrider/: mod.rs  none.rs
crates/cogito-context/src/projector/: mod.rs  standard.rs
crates/cogito-context/tests/: pipeline_assembly.rs  skill_injector.rs  standard_projection.rs  truncate_compaction.rs  truncate_threshold_ratio.rs
crates/cogito-conversation/: Cargo.toml
crates/cogito-conversation/src/: lib.rs
crates/cogito-core/: Cargo.toml
crates/cogito-core/benches/: hook_latency.rs
crates/cogito-core/src/: lib.rs
crates/cogito-core/src/harness/: dispatcher.rs  hooks.rs  mod.rs  prompt.rs  resume.rs  step_recorder.rs  strategy.rs  stream_demux.rs  tool_resolver.rs  tool_surface.rs  turn_driver.rs
crates/cogito-core/src/runtime/: actor.rs  builder.rs  handle.rs  mod.rs  session_loop.rs  session_spec.rs  store_writer.rs  subagent.rs  types.rs
crates/cogito-core/tests/: cancel_after_first_turn.rs  context_managed_no_op.rs  context_managed_with_truncate.rs  h04_multi_compaction_projection.rs  h05_tool_filter.rs  h06_skill_sigil_detection.rs  h11_skill_injection.rs  harness_dispatcher.rs  harness_prompt.rs  harness_stream_demux.rs  harness_tool_resolver.rs  harness_tool_surface.rs  hook_integration.rs  hook_panic_isolation.rs  mid_pause_user_input.rs  per_session_injection.rs  resume_chaos.rs  resume_paused_job_synthesizes_failure.rs  runtime_close_session.rs  runtime_resume_dispatch.rs  runtime_session_mode.rs  runtime_submit.rs  session_e2e.rs  skill_roots_e2e.rs  subagent_delegate.rs  turn_driver_max_turns.rs  turn_driver_skill_activation_user.rs  turn_driver_text_only.rs  turn_driver_tool_call.rs
crates/cogito-jobs/: Cargo.toml
crates/cogito-jobs/src/: bash.rs  lib.rs  local.rs  run_tests.rs  sleep_tool.rs
crates/cogito-jobs/tests/: bash_e2e.rs  bash_tool.rs  cancel_while_paused.rs  local_contract.rs  max_turns_survives_resume.rs  mid_pause_user_input.rs  run_tests_happy_path.rs  skill_script_e2e.rs  sleep_then_complete.rs
crates/cogito-mcp/: Cargo.toml
crates/cogito-mcp/src/: client.rs  config.rs  error.rs  factory.rs  handler.rs  lib.rs  naming.rs  provider.rs  result_mapping.rs  transport.rs
crates/cogito-mcp/tests/: integration.rs
crates/cogito-model/: Cargo.toml
crates/cogito-model/src/: error.rs  lib.rs  provider_config.rs  sse.rs
crates/cogito-model/src/anthropic/: decode.rs  encode.rs  mod.rs  wire.rs
crates/cogito-model/src/openai_compat/: decode.rs  encode.rs  mod.rs  wire.rs
crates/cogito-model/src/openai_responses/: decode.rs  encode.rs  mod.rs  wire.rs
crates/cogito-model/tests/: anthropic_replay.rs  limits.rs  openai_compat_replay.rs  openai_responses_decode.rs  provider_config.rs
crates/cogito-plugin/: Cargo.toml
crates/cogito-plugin/src/: discovery.rs  lib.rs  manifest.rs
crates/cogito-plugin/tests/: integration.rs  loader.rs
crates/cogito-protocol/: Cargo.toml
crates/cogito-protocol/src/: command.rs  content.rs  context.rs  error.rs  event.rs  exec_ctx.rs  gateway.rs  hook.rs  ids.rs  job.rs  lib.rs  metrics.rs  session.rs  sigil.rs  skill.rs  store.rs  strategy.rs  strategy_registry.rs  stream.rs  subagent.rs  test_support.rs  tool.rs  turn.rs  turn_trigger.rs  workspace.rs
crates/cogito-protocol/tests/: event_roundtrip.rs  exec_ctx.rs  gateway_value_types.rs  hook_trait.rs  job_types.rs  metrics_trait.rs  model_id_suffix.rs  skill_types.rs  store_skill_activated.rs  strategy.rs  stream_event.rs  tool_types.rs  turn_outcome.rs
crates/cogito-sandbox/: Cargo.toml
crates/cogito-sandbox/src/: config.rs  executor.rs  lib.rs  truncate.rs
crates/cogito-skills/: Cargo.toml
crates/cogito-skills/src/: discovery.rs  lib.rs  metadata.rs  registry.rs  sigil.rs
crates/cogito-skills/tests/: discovery.rs  metadata.rs  sigil.rs  skill_roots.rs
crates/cogito-store/: Cargo.toml
crates/cogito-store-jsonl/: Cargo.toml
crates/cogito-store-jsonl/benches/: append_throughput.rs
crates/cogito-store-jsonl/src/: lib.rs
crates/cogito-store-jsonl/tests/: contract.rs
crates/cogito-store/benches/: append_throughput.rs
crates/cogito-store/src/: jsonl.rs  lib.rs
crates/cogito-store/tests/: contract.rs
crates/cogito-strategy/: Cargo.toml
crates/cogito-strategy/src/: error.rs  lib.rs  parser.rs  registry.rs  schema.rs  scope.rs
crates/cogito-strategy/tests/: contract.rs  parse.rs
crates/cogito-tools/: Cargo.toml
crates/cogito-tools/src/: composite.rs  lib.rs  provider.rs  skill_scope.rs  workspace.rs
crates/cogito-tools/src/builtins/: activate_skill.rs  (+9 more)
crates/cogito-tools/tests/: builtin_provider.rs  composite.rs  edit.rs  glob.rs  grep.rs  list_dir.rs  skill_scope.rs  web_fetch.rs  workspace.rs  write_file.rs
crates/cogito-tui/: Cargo.toml  README.md
crates/cogito-tui/src/: app.rs  cli.rs  event_loop.rs  keymap.rs  lib.rs  logs.rs  main.rs  render_model.rs  resume.rs  runtime_build.rs  slash.rs  terminal.rs
crates/cogito-tui/tests/: e2e.rs  edges.rs  list_strategies.rs  resume.rs  snapshot.rs
crates/testing/cogito-mock-model/: Cargo.toml
crates/testing/cogito-test-fixtures/: Cargo.toml
tools/cogito-gen-schema/: Cargo.toml
tools/cogito-gen-schema/src/: main.rs
(+201 files in other folders)
