[workspace]
resolver = "2"
members = [
    "crates/cogito-core",
    "crates/cogito-protocol",
    "crates/cogito-store-jsonl",
    "crates/cogito-model",
    "crates/cogito-tools",
    "crates/cogito-sandbox",
    "crates/cogito-jobs",
    "crates/cogito-mcp",
    "crates/cogito-config",
    "crates/cogito-cli",
    "crates/cogito-tui",
    "crates/testing/cogito-test-fixtures",
    "crates/testing/cogito-mock-model",
    "tools/cogito-gen-schema",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
authors = ["Nathan(qiannengsheng@163.com)"]
license = "Apache-2.0"
repository = "https://github.com/nathan-tsien/cogito"
# Not published to crates.io until v1.0 GA (see ADR-0005). Each member
# opts in via `publish.workspace = true`; this also lets cargo-deny's
# `allow-wildcard-paths` apply to our internal path dependencies.
publish = false

[workspace.dependencies]
# Internal crates
cogito-config = { path = "crates/cogito-config" }
cogito-core = { path = "crates/cogito-core" }
cogito-protocol = { path = "crates/cogito-protocol" }
cogito-store-jsonl = { path = "crates/cogito-store-jsonl" }
cogito-model = { path = "crates/cogito-model" }
cogito-tools = { path = "crates/cogito-tools" }
cogito-sandbox = { path = "crates/cogito-sandbox" }
cogito-jobs = { path = "crates/cogito-jobs" }
cogito-mcp = { path = "crates/cogito-mcp" }
cogito-test-fixtures = { path = "crates/testing/cogito-test-fixtures" }
cogito-mock-model = { path = "crates/testing/cogito-mock-model" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
eventsource-stream = "0.2"
dashmap = "6.1"
parking_lot = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono", "uuid"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
bytes = "1.7"

# Schemas
jsonschema = "0.18"
schemars = { version = "0.8", features = ["chrono", "uuid1"] }

# IDs and time
uuid = { version = "1.10", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1.1", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# TUI (Sprint 6+)
ratatui = "0.28"
crossterm = "0.28"

# Testing
tokio-test = "0.4"
mockito = "1.5"
insta = "1.40"
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
rstest = "0.22"
tempfile = "3.10"
temp-env = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
unimplemented = "warn"
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"

module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[profile.bench]
debug = true
