[package]
name = "cogito-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "cogito"
path = "src/main.rs"

[dependencies]
cogito-core.workspace = true
cogito-protocol.workspace = true
cogito-store-jsonl.workspace = true
cogito-model.workspace = true
cogito-tools.workspace = true
cogito-jobs.workspace = true

tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
