[package]
name = "cogito-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "cogito"
path = "src/main.rs"

[dependencies]
cogito-protocol = { workspace = true }
cogito-config = { workspace = true, features = ["file"] }
cogito-core = { workspace = true }
cogito-jobs = { workspace = true }
cogito-mcp = { workspace = true }
cogito-model = { workspace = true }
cogito-plugin = { workspace = true }
cogito-sandbox = { workspace = true }
cogito-skills = { workspace = true }
cogito-strategy = { workspace = true }
cogito-tools = { workspace = true }
cogito-store = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
cogito-test-fixtures = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
temp-env = { workspace = true, features = ["async_closure"] }

[lints]
workspace = true
