[package]
name = "cogito-context"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
cogito-protocol = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
cogito-test-fixtures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
