[package]
name = "cogito-context"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
cogito-protocol = { workspace = true }
cogito-skills = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
cogito-mock-model = { workspace = true }
cogito-test-fixtures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
serde_json = { workspace = true }
chrono = { workspace = true }
