[package]
name = "cogito-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cogito-protocol.workspace = true
cogito-conversation.workspace = true
cogito-model.workspace = true
cogito-tools.workspace = true
cogito-sandbox.workspace = true
cogito-jobs.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
cogito-test-fixtures.workspace = true
cogito-mock-model.workspace = true
tokio-test.workspace = true
rstest.workspace = true
insta.workspace = true
proptest.workspace = true

[lints]
workspace = true
