[package]
name = "cogito-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cogito-protocol.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-trait.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
cogito-test-fixtures.workspace = true
cogito-mock-model.workspace = true
tokio-test.workspace = true
rstest.workspace = true
insta.workspace = true
proptest.workspace = true

[lints]
workspace = true
