[package]
name = "cogito-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cogito-protocol.workspace = true
cogito-context.workspace = true
cogito-jobs.workspace = true
jsonschema.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-trait.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
ulid.workspace = true
uuid.workspace = true
chrono.workspace = true

[features]
# Opt-in stub constructors for downstream crate tests that need a
# `SessionHandle` without standing up a full `Runtime` (e.g.
# `cogito-tui`'s pure-state App tests). Production builds leave the
# feature off, so the stubs are never compiled into shipped binaries.
test-support = []

[dev-dependencies]
cogito-test-fixtures.workspace = true
cogito-tools.workspace = true
cogito-mock-model.workspace = true
cogito-context.workspace = true
cogito-store.workspace = true
cogito-skills.workspace = true
async-stream.workspace = true
tokio-test.workspace = true
rstest.workspace = true
insta.workspace = true
proptest.workspace = true
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "hook_latency"
harness = false

[lints]
workspace = true
