[package]
name = "cogito-jobs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
# Test-only async tools (e.g. `SleepTool`) used by integration and chaos
# tests. Off by default so the fixtures do not ship in production builds.
test-tools = []

[dependencies]
cogito-protocol.workspace = true

async-trait.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "rt", "time", "process"] }
tracing.workspace = true

[dev-dependencies]
cogito-protocol = { workspace = true, features = ["test-support"] }
cogito-test-fixtures.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "test-util", "process"] }

[lints]
workspace = true
