[package]
name = "cogito-mcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cogito-protocol.workspace = true

async-trait.workspace = true
rmcp.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1 = "0.10"
thiserror.workspace = true
tokio.workspace = true
toml = "0.8"
tracing.workspace = true

[dev-dependencies]
# Integration tests spin up an in-process rmcp server; we need the
# server feature for that. Not enabled in regular builds — keeps the
# crate small.
rmcp = { workspace = true, features = ["server"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
