[package]
name = "cogito-model"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cogito-protocol.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true

[dev-dependencies]
mockito.workspace = true
tokio-test.workspace = true

[lints]
workspace = true
