[package]
name = "cogito-model"
version = "0.2.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cogito-protocol = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
cogito-test-fixtures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml = { workspace = true }

[lints]
workspace = true
