[package]
name = "cogito-protocol"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
uuid.workspace = true
chrono.workspace = true
ulid.workspace = true
schemars.workspace = true
futures.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true

[lints]
workspace = true
