[package]
name = "cogito-protocol"
version = "0.2.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
uuid.workspace = true
chrono.workspace = true
ulid.workspace = true
schemars.workspace = true
futures.workspace = true
regex.workspace = true

[features]
# Opt-in shared test infrastructure. Downstream crates that consume the
# harness traits / contract suites under `crate::test_support` enable it
# in their dev-dependencies:
#
#     cogito-protocol = { workspace = true, features = ["test-support"] }
#
# Production builds leave the feature off, so the test scaffolding is
# never compiled into shipped binaries.
test-support = ["tokio/time", "tokio/macros"]

[dev-dependencies]
cogito-test-fixtures = { workspace = true }
insta.workspace = true
proptest.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
toml = { workspace = true }

[lints]
workspace = true
