[package]
name = "cogito-sandbox"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cogito-protocol.workspace = true

tokio = { workspace = true, features = ["process", "io-util", "time", "rt", "macros"] }
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
cogito-protocol = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
