[package]
name = "cogito-store-jsonl"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cogito-protocol.workspace = true

tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
cogito-test-fixtures.workspace = true
tokio-test.workspace = true
rstest.workspace = true
tempfile = "3.10"

[lints]
workspace = true
