[package]
name = "cogito-store-jsonl"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cogito-protocol.workspace = true
async-trait.workspace = true
async-stream.workspace = true
dashmap.workspace = true
futures.workspace = true
tokio.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
cogito-test-fixtures.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-test.workspace = true
rstest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
