[package]
name = "cogito-store"
version = "0.2.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["jsonl"]
# JSONL-file backend (dev/debug). v0.1 ships this as the only backend.
jsonl = []
# Future backends land as feature-gated modules + optional deps (ADR-0024):
#   postgres = ["dep:tokio-postgres", "dep:bb8-postgres"]  # v0.4
#   sqlite   = ["dep:rusqlite"]                            # future

[dependencies]
cogito-protocol.workspace = true
async-trait.workspace = true
async-stream.workspace = true
dashmap.workspace = true
futures.workspace = true
tokio.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
cogito-test-fixtures.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-test.workspace = true
rstest.workspace = true
tempfile.workspace = true
chrono.workspace = true
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "append_throughput"
harness = false

[lints]
workspace = true
