[package]
name = "cogito-tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cogito-protocol.workspace = true

tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
jsonschema.workspace = true
schemars.workspace = true

[dev-dependencies]
tokio-test.workspace = true
rstest.workspace = true

[lints]
workspace = true
