[package]
name = "cogito-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "cogito-tui"
path = "src/main.rs"

[dependencies]
cogito-core.workspace = true

tokio.workspace = true
anyhow.workspace = true
ratatui.workspace = true
crossterm.workspace = true

[lints]
workspace = true
